--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-ok lets hope it works
+<!DOCTYPE html>
+<html>
+  <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="description" content="test OwO UwU">
+      <meta name="keywords" content="PSP,RSS,XML,Homebrew">
+      <meta name="author" content="IronConnect24 Team">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IronConnect64</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1>coming soon&trade;</h1>
+  </body>
+</html>
