--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="test OwO UwU">
       <meta name="keywords" content="PSP,RSS,XML,Homebrew">
-      <meta name="author" content="IronConnect64 Team">
-    <title>IronConnect64</title>
+      <meta name="author" content="PSPConnect24 Team">
+    <title>PSPConnect24</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
